# dotfiles

./: LICENSE
i3/: config
i3/scripts/pointer/: autotiling
kitty/: kitty.conf
lf/: lfrc
mpv/: mpv.conf
nvim/: lazy-lock.json
polybar/: colors.ini  config.ini  mocha.ini  tess.py  test.ini
polybar/modules/powy/: README.md  powy.py  pyproject.toml
polybar/modules/powy/src/: __init__.py  player.py
