[tool.poetry]
name = "powy"
version = "0.1.0"
description = "A polybar module to manage basic spotify commands."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
